@@ -1,0 +1,10 @@
+<?php
+$language = array (
+  'static:admin:empty' => 'Geen statische pagina\'s gemaakt',
+  'admin:appearance:static' => 'Beheer statische pagina\'s',
+  'admin:appearance:static:new' => 'Maak/Bewerk een statische pagina',
+  'admin:appearance:static:new:permalink' => 'Permalink',
+  'static:admin:create' => 'Maak een statische pagina',
+  'static:admin:create:subpage' => 'Maak een subpagina',
+);
+add_translation("nl", $language);
